fix spacings

--- a/src/views/Welcome/Welcome.module.css
+++ b/src/views/Welcome/Welcome.module.css
@@ -7,6 +7,7 @@
 
 .heading {
   composes: screenHeadline from '../../components/Typography/Typography.module.css';
+  margin-bottom: 16px;
 }
 
 .info {
@@ -19,7 +20,7 @@
 }
 
 .create {
-  margin-top: 1.5rem;
+  margin-top: 40px;
   composes: buttonPrimary from '../../components/Button/Button.module.css';
 }
 
